# LyoApp-July

./: .gitignore  ADD_FILES_INSTRUCTIONS.md  ADD_THESE_2_FILES.txt  ADD_THESE_FILES.txt  AI_AVATAR_AND_UNITY_GUIDE.md  AI_AVATAR_BACKEND_COMPLETE.md  AI_AVATAR_COMPLETE_FLOW.md  AI_AVATAR_CRASH_FIX.md  AI_AVATAR_CREATOR_TECHNICAL_SPEC.md  AI_AVATAR_DEEP_FIX.md  AI_AVATAR_DIAGNOSIS.md  AI_AVATAR_FINAL_FIX.md  AI_AVATAR_IMPLEMENTATION_SUMMARY.md  AI_AVATAR_LAYOUT_STRUCTURE.md  AI_AVATAR_QUESTION_LIMIT_FIX.md  AI_AVATAR_READY.md  AI_AVATAR_REAL_BACKEND.md  AI_AVATAR_REAL_FIX.md  AI_AVATAR_REAL_FIX_COMPLETE.md  AI_AVATAR_SUCCESS_REPORT.md  AI_AVATAR_UI_ENHANCEMENT.md  AI_BACKEND_MISSING.md  AI_BRAIN_FIX_SUMMARY.md  AI_CLASSROOM_FIRST_LESSON_FIX.md  AI_CLASSROOM_IMPLEMENTATION.md  AI_CLASSROOM_STATUS.md  AI_ONBOARDING_FLOW_ANALYSIS.md  AI_ONBOARDING_FLOW_STREAMLINED_FINAL.md  AI_ONBOARDING_STREAMLINED_IMPLEMENTATION.md  ALL_BUILD_ERRORS_COMPLETELY_FIXED.md  APICONFIG_PRODUCTION_FIX_CONFIRMED.md  API_SETUP_GUIDE.md  APP_IS_RUNNING_NOW.md  APP_STORE_READY_SUMMARY.md  APP_STORE_SUBMISSION_CHECKLIST.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_GUIDE.md  AUTHENTICATION_DEBUG_GUIDE.md  AUTHENTICATION_FINAL_STATUS.md  AUTHENTICATION_FIX_DEBUG.md  (+330 more)
.build/: build.db-journal  debug.yaml
.github/: copilot-instructions.md
LyoApp July/: Item.swift  (+2 more)
LyoBackend/: .env.sample  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  seed_data.py  setup.sh  setup_check.py  setup_learning_system.sh  simple_backend.py  simple_backend_minimal.py  start_dev.py
LyoBackend/alembic/versions/: 001_initial_tables.py  002_learning_system.py
LyoBackend/migrations/: env.py
LyoBackend/scripts/: init_db.sql  seed_db.py
LyoBackend/src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
LyoBackend/src/core/: config.py  config_simple.py  database.py  exceptions.py  logging.py  redis.py  utils.py
LyoBackend/src/learning/: __init__.py  models.py  schemas.py
LyoBackend/src/learning/routes/: __init__.py  courses.py  evidence.py  progress.py  sessions.py
LyoBackend/src/learning/seed/: __init__.py  seed_css_flexbox.py
LyoBackend/src/learning/services/: __init__.py  compiler.py  policy.py
LyoBackend/src/media/: __init__.py  models.py  router.py  schemas.py  service.py
LyoBackend/src/profiles/: __init__.py  models.py  router.py  schemas.py  service.py
LyoBackend/tests/: conftest.py  test_auth.py  test_profiles.py
(+868 files in other folders)
